--- a/index.html
+++ b/index.html
@@ -26,12 +26,41 @@
     <section id="artigos">
         <h2>Artigos</h2>
         <article>
-            <h3>Título do Artigo 1</h3>
-            <p>Conteúdo do artigo 1.</p>
+            <h3>Dicas para Alimentação Saudável</h3>
+            <p>Encontre aqui dicas práticas para melhorar sua alimentação e promover sua saúde.</p>
+            <ul>
+                <li><strong>Variedade de Cores:</strong> Consuma frutas e vegetais de cores variadas para obter uma ampla gama de nutrientes.</li>
+                <li><strong>Pequenas Porções e Frequência:</strong> Opte por refeições menores ao longo do dia para manter o metabolismo ativo.</li>
+                <li><strong>Hidratação Adequada:</strong> Beba água regularmente para manter o corpo hidratado e auxiliar na digestão.</li>
+                <li><strong>Substituições Inteligentes:</strong> Troque ingredientes menos saudáveis por alternativas mais nutritivas em suas receitas.</li>
+            </ul>
         </article>
         <article>
-            <h3>Título do Artigo 2</h3>
-            <p>Conteúdo do artigo 2.</p>
+            <h3>Exercícios Revitalizantes para o Dia a Dia</h3>
+            <p>Descubra exercícios simples que podem transformar sua rotina e sua disposição.</p>
+            <ul>
+                <li><strong>Caminhada:</strong> Inclua caminhadas diárias para melhorar o condicionamento físico e a saúde cardiovascular.</li>
+                <li><strong>Alongamento:</strong> Pratique alongamentos para melhorar a flexibilidade e prevenir lesões musculares.</li>
+                <li><strong>Respiração Profunda:</strong> Pratique técnicas de respiração para relaxar e reduzir o estresse do dia a dia.</li>
+            </ul>
+        </article>
+        <article>
+            <h3>Meditação e Relaxamento: Como Começar</h3>
+            <p>Aprenda técnicas básicas de meditação para reduzir o estresse e melhorar sua qualidade de vida.</p>
+            <ul>
+                <li><strong>Mindfulness:</strong> Pratique a atenção plena para aumentar a consciência do presente e reduzir a ansiedade.</li>
+                <li><strong>Música Relaxante:</strong> Ouça músicas suaves para ajudar a relaxar e promover um sono tranquilo.</li>
+                <li><strong>Visualização Criativa:</strong> Use visualizações para focar em metas pessoais e aumentar a motivação.</li>
+            </ul>
+        </article>
+        <article>
+            <h3>Benefícios da Caminhada Diária</h3>
+            <p>Descubra por que caminhar regularmente pode ser uma ótima opção para sua saúde física e mental.</p>
+            <ul>
+                <li><strong>Cardiovascular:</strong> Melhora a saúde do coração e reduz o risco de doenças cardiovasculares.</li>
+                <li><strong>Mental:</strong> Reduz o estresse e melhora o humor, promovendo bem-estar emocional.</li>
+                <li><strong>Físico:</strong> Ajuda a controlar o peso, fortalece músculos e articulações, e aumenta a energia.</li>
+            </ul>
         </article>
     </section>
 
@@ -55,3 +84,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+
